<?xml version="1.0" encoding="utf-8"?>
<resources>
    <plurals name="tempo">
        <item quantity="one">%d minuto</item>
        <item quantity="other">%d minutos</item>
    </plurals>
    <plurals name="cronograma">
        <item quantity="one">Cronograma</item>
        <item quantity="other">Cronogramas</item>
    </plurals>
    <string name="app_name">Chronos</string>
    <string name="cronograma_nao_encontrado">Cronograma não encontrado!</string>
    <string name="disciplina_nao_encontrada">Disciplina não encontrada!</string>
    <string name="assunto_nao_encontrado">Assunto não encontrado!</string>
    <string name="exercicio">Exercício</string>
    <string name="excluir_disciplina">Excluir disciplina.</string>
    <string name="editar_disciplina">Editar disciplina.</string>
    <string name="descricao">Descrição</string>
    <string name="anotacao">Anotação</string>
    <string name="novo_assunto">Novo Assunto</string>
    <string name="salvar">Salvar</string>
    <string name="nao_pode_ser_vazio">Não pode ser vazio!</string>
    <string name="nome">Nome</string>
    <string name="nova_disciplina">Nova disciplina</string>
    <string name="cancelar">Cancelar</string>
    <string name="editar">Editar</string>
    <string name="editar_assunto">Editar Assunto</string>
    <string name="data_inicial">Data inicial</string>
    <string name="data_final">Data final</string>
    <string name="Nome">Nome</string>
    <string name="novo_cronograma">Novo cronograma</string>
    <string name="bem_vindo">Seja bem-vindo!</string>
    <string name="login_para_continuar">Faça login para continuar</string>
    <string name="criar_conta">Criar conta</string>
    <string name="senha">Senha</string>
    <string name="login">Entrar</string>
    <string name="ja_tenho_conta">Já possuo conta</string>
    <string name="crie_sua_conta">Crie sua conta</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="sair">Sair</string>
    <string name="excluir">Excluir</string>
    <string name="usuario_nao_encontrado">Usuário não encontrado</string>
    <string name="tem_certeza">Tem certeza?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="acertos">Acertos</string>
    <string name="quantidade">Quantidade</string>
    <string name="data">Data</string>
    <string name="data_invalida">Data inválida</string>
    <string name="novo_exercicio">Novo exercício</string>
    <string name="novo_material">Novo material</string>
    <string name="tempo">Tempo(minutos)</string>
    <string name="nova_revisao">Nova revisão</string>
    <string name="diaria">Diária</string>
    <string name="semanal">Semanal</string>
    <string name="quinzenal">Quinzenal</string>
    <string name="mensal">Mensal</string>
    <string name="material">Material</string>
    <string name="revisao">Revisão</string>
    <string name="adicionar">Adicionar</string>
    <string name="perifl">Perfil</string>
    <string name="relatorios">Relatórios</string>
    <string name="cronogramas">Cronogramas</string>
    <string name="deve_ter_mais_que_3">Deve ter mais de 3 caracteres.</string>
    <string name="sessao_expirou">Sessão expirou.</string>
    <string name="menor_ou_igual">Deve ser menor ou igual.</string>
    <string name="maior_que_0">Deve ser maior que 0!</string>
    <string name="maior_igual_0">Deve ser maior ou igual a 0!</string>
    <string name="email_invalido">Email inválido.</string>
    <string name="no_minimo_6">Deve ter no mínimo 6 caracteres.</string>

    <string name="voce_nao_possui_cronograma">Você não possui Cronogramas.</string>
    <string name="crie_plano_estudo">Comece criando seu plano de estudos!</string>
    <string name="voce_nao_possui_disciplinas">Você não possui disciplinas.</string>
    <string name="voce_nao_possui_artefatos">Você não possui atividades.</string>
    <string name="materiais">Materiais</string>
    <string name="exercicios">Exercícios</string>
    <string name="crie_artefatos">Você pode escolher entre Revisões, Materiais de Estudo ou Lista de Exercícios.</string>

    <string name="crie_disciplinas">Adicione disciplinas para podermos começar!</string>

    <string name="andamento">Andamento</string>
    <string name="disciplinas">Disciplinas</string>
    <string name="geral">Geral</string>
    <string name="por_cronograma">Por Cronograma</string>
    <string name="video_aula">Vídeo aula</string>
    <string name="livros">Livros</string>
    <string name="internet_artigo_post">Internet / Artigos / Posts</string>
    <string name="minutos">%d min.</string>
    <string name="confirme_senha">Confirme a senha</string>
    <string name="assunto">Assunto</string>
    <string name="channel_name">Chronos</string>
    <string name="channel_description">Chronos Channel</string>
</resources>