<?xml version="1.0" encoding="utf-8"?>
<com.espweb.chronos.presentation.ui.custom.ArtefatoDialogTemplate xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/rg_escopo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_diario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/diaria" />

        <RadioButton
            android:id="@+id/rb_semanal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/semanal" />

        <RadioButton
            android:id="@+id/rb_quinzenal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/quinzenal" />

        <RadioButton
            android:id="@+id/rb_mensal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mensal" />
    </RadioGroup>

</com.espweb.chronos.presentation.ui.custom.ArtefatoDialogTemplate>